[gd_scene load_steps=2 format=3 uid="uid://dy1fqsaty2u30"]

[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Commands/AnimationControl.gd" id="1"]

[node name="VBoxContainer" type="VBoxContainer" node_paths=PackedStringArray("anim_path_ctrl", "anim_name_ctrl", "blend_ctrl", "speed_ctrl", "from_end_ctrl", "wait_check")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
anim_path_ctrl = NodePath("PathHBoxContainer/PathLineEdit")
anim_name_ctrl = NodePath("ANameHBoxContainer/NameLineEdit")
blend_ctrl = NodePath("BlendHBoxContainer/BlendLineEdit")
speed_ctrl = NodePath("SpeedHBoxContainer/SpeedLineEdit")
from_end_ctrl = NodePath("FromEndHBoxContainer/FromEndCheck")
wait_check = NodePath("TypeHBoxContainer/WaitCheck")

[node name="PathHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="PathHBoxContainer"]
layout_mode = 2
text = "Path3D: "

[node name="PathLineEdit" type="LineEdit" parent="PathHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ANameHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ANameHBoxContainer"]
layout_mode = 2
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="ANameHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlendHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="BlendHBoxContainer"]
layout_mode = 2
text = "Blend: "

[node name="BlendLineEdit" type="SpinBox" parent="BlendHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
page = 10.0

[node name="SpeedHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SpeedHBoxContainer"]
layout_mode = 2
text = "Speed : "

[node name="SpeedLineEdit" type="SpinBox" parent="SpeedHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
page = 10.0

[node name="FromEndHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FromEndCheck" type="CheckButton" parent="FromEndHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="WaitCheck" type="CheckButton" parent="TypeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="PathHBoxContainer/PathLineEdit" to="." method="_on_path_lineedit_text_changed"]
[connection signal="text_changed" from="ANameHBoxContainer/NameLineEdit" to="." method="_on_name_lineedit_text_changed"]
[connection signal="value_changed" from="BlendHBoxContainer/BlendLineEdit" to="." method="_on_blend_lineedit_value_changed"]
[connection signal="value_changed" from="SpeedHBoxContainer/SpeedLineEdit" to="." method="_on_speed_lineedit_value_changed"]
[connection signal="toggled" from="FromEndHBoxContainer/FromEndCheck" to="." method="_on_from_endcheck_toggled"]
[connection signal="toggled" from="TypeHBoxContainer/WaitCheck" to="." method="_on_is_wait_check_toggled"]
